# cd4ml

./: .gitignore  .pre-commit-config.yaml  dvc.yaml  models.dvc  params.yaml  pyproject.toml
.dvc/: config
cd4ml_sales_forecasting/: decision_tree.py  download_data.py  evaluation.py  split_data.py
notebooks/: eda.ipynb  train.ipynb
reports/: metrics.json
results/: metrics.json
